@@ -1,6 +1,10 @@
 Changes since version 1.0.1
 ---------------------------
 
+- Added timestamps to the default Ice logger. You can enable
+  timestamps by setting the `Ice.Logger.Timestamp' property to a value
+  larger than zero. By default timestamps are disabled.
+
 - Improved IceBox service deactivation. Instead of successively
   stoping a service and destroying its communicator, services are now
   all stopped first and then their communicators are destroyed.
